--- a/cherry/contact/index.html
+++ b/cherry/contact/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="icon" type="image/png" href="../pnglogobig.png" sizes="1000x1000" />
    
-    <title>「ｒｅ：𝖆𝖑𝖊𝖙𝖎𝖚𝖓𝖊 」</title>
+    <title>「ｒｅ：CONTACT 」</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123647555-2"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -58,6 +58,12 @@
     <p class="page-description text-center">
    / contact me / <a id="l9" href="https://relivesight.com/">relivesight.com</a> / <a id="l14" href="https://relivesight.com/cherry/">cherry</a> / <a id="l8" href="https://relivesight.com/">return home</a> /
    <br><br>
+   [INFO]: open to commissions for cover art, video visuals, and more. contact me on
+   <a id="l16" target="_blank" href="https://twitter.com/aletiune">twitter (@aletiune)</a> or discord (𝖆𝖑𝖊𝖙𝖎𝖚𝖓𝖊#3865)
+   for quotes. flexible.
+   <br><br>
+   [SOCIAL]: my various socials:
+   <br><br>
    [discord]: 𝖆𝖑𝖊𝖙𝖎𝖚𝖓𝖊#3865
    <br>
    [discord_2]: 𝑜𝓂𝓃𝒾𝓈𝒶𝒾 ♡#2639
@@ -97,7 +103,7 @@
       document.getElementsByClassName('button1')[0].style['background-color'] = 'white';
       document.getElementsByClassName('button1')[0].style['color'] = 'black';
       var lemth="l1"
-      for(let i = 1; i < 16; i++)
+      for(let i = 1; i < 17; i++)
       {
           lemth="l" +i
           document.getElementById(lemth).style['color'] = 'white';
@@ -112,7 +118,7 @@
       document.getElementsByClassName('button1')[0].style['background-color'] = 'black';
       document.getElementsByClassName('button1')[0].style['color'] = 'white';
       var lemth="l1"
-      for(let i = 1; i < 16; i++)
+      for(let i = 1; i < 17; i++)
       {
           lemth="l" +i
           document.getElementById(lemth).style['color'] = 'black';
