--- a/cherry/shop/index.html
+++ b/cherry/shop/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="icon" type="image/png" href="../pnglogobig.png" sizes="1000x1000" />
    
-    <title>「ｒｅ：𝖆𝖑𝖊𝖙𝖎𝖚𝖓𝖊 」</title>
+    <title>「ｒｅ：SHOP 」</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123647555-2"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
