--- a/cherry/y2kvoid/index.html
+++ b/cherry/y2kvoid/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../p/main.css">
     <link rel="icon" type="image/png" href="../pnglogobig.png" sizes="1000x1000" />
    
-    <title>「ｒｅ：𝖆𝖑𝖊𝖙𝖎𝖚𝖓𝖊 」</title>
+    <title>「ｒｅ：Y2KVOID 」 </title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123647555-2"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -63,15 +63,15 @@
    [CLIENT]: - <a id="l9" target="_blank" href="https://lnk.bio/tenshi_exe">tenshi</a>
    <br>
    [DATE]: - aug/2021
+   <br>
+   [LINK]: - <a id="l10" target="_blank" href="#">(not yet)</a>
    <br><br>
    [INFO]: - Cover art and video visual for tenshi & Cheap Thrill's Y2KVOID.  
    <br><br><img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/cherry/official/y2kvoid/1.png">
    <br><img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/cherry/official/y2kvoid/2.png"> 
    <br><img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/cherry/official/y2kvoid/3.png"> 
    <br>
-   {still frame - video visual}
-  
-</p><br>
+  </p><br>
   
  <p class="page-description"><a id="l1" class="yoyo" href="https://relivesight.com/cherry/">/return.portfolio/</a>
         <br><br>
@@ -89,7 +89,7 @@
       document.getElementsByClassName('button1')[0].style['background-color'] = 'white';
       document.getElementsByClassName('button1')[0].style['color'] = 'black';
       var lemth="l1"
-      for(let i = 1; i < 10; i++)
+      for(let i = 1; i < 11; i++)
       {
           lemth="l" +i
           document.getElementById(lemth).style['color'] = 'white';
@@ -104,7 +104,7 @@
       document.getElementsByClassName('button1')[0].style['background-color'] = 'black';
       document.getElementsByClassName('button1')[0].style['color'] = 'white';
       var lemth="l1"
-      for(let i = 1; i < 10; i++)
+      for(let i = 1; i < 11; i++)
       {
           lemth="l" +i
           document.getElementById(lemth).style['color'] = 'black';
