--- a/lists/games/index.html
+++ b/lists/games/index.html
@@ -93,7 +93,7 @@
           <p>Status:</p>
         
           <table class="tableizer-table">
-            <tr><td><center>Total Game Count: 565</center></td></tr>
+            <tr><td><center>Total Game Count: 566</center></td></tr>
                <tr><td>Estimated List Completeness: ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱ 75%</td></tr>
             </tbody></table>  
 
@@ -341,7 +341,7 @@
                <tr><td class="fin">Portal Reloaded</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td></td></tr>
                <tr><td class="fin">Portal Stories: Mel</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>&nbsp;</td></tr>
                
-
+               <tr><td class="qui">GashiShachiNoSachi</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td class="qui">The Basement Collection</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>&nbsp;</td></tr>
               <tr><td class="qui">Mirror's Edge</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td class="qui">Super Mario Bros.: The Lost Levels</td><td>N</td><td>Y</td><td>NES</td><td>N</td><td>&nbsp;</td></tr>
