--- a/cherry/daily/index.html
+++ b/cherry/daily/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="icon" type="image/png" href="../pnglogobig.png" sizes="1000x1000" />
    
-    <title>「ｒｅ：𝖆𝖑𝖊𝖙𝖎𝖚𝖓𝖊 」</title>
+    <title>「ｒｅ：DAILY 」</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123647555-2"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -58,7 +58,7 @@
     <h2>[Daily Art]</h2>
     <p class="page-description text-center">
         / learn to live / <a id="l5" href="https://relivesight.com/">relivesight.com</a> / <a id="l6" href="https://relivesight.com/">return home</a> /<br>
-   [official start date]: {jun 15 2021} [current day]: {no.51} 
+   [official start date]: {jun 15 2021} [current day]: {no.55} 
    
    <br><br>
    [tools utilized]: after effects / element 3d / photoshop / blender /
@@ -399,7 +399,7 @@
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/030.png" 
-                        data-caption='no.030:<br class="larry"> "recede.iv<br class="larry"> (C3L3STIAL天の-knockoff)"<br class="larry"> <h3>- 07/13/21</h3> '>
+                        data-caption='no.030:<br class="larry"> "recede.iv<br> (C3L3STIAL天の-knockoff)"<br class="larry"> <h3>- 07/13/21</h3> '>
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/030.png" >
                         </a>
                     </div>
@@ -732,11 +732,11 @@
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/52.png" >
                         </a>
                     </div>
-                </div><!--
+                </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/53.png" 
-                        data-caption='no.053:<br class="larry"> "echos<br class="larry"> <h3>- 08/05/21</h3> '>
+                        data-caption='no.053:<br class="larry"> "echos"<br class="larry"> <h3>- 08/05/21</h3> '>
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/53.png" >
                         </a>
                     </div>
@@ -764,7 +764,7 @@
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/55.png" >
                         </a>
                     </div>
-                </div>
+                </div><!--
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/56.png" 
