--- a/cherry/index.html
+++ b/cherry/index.html
@@ -60,7 +60,7 @@
             / learn to live / <a id="l5" href="https://relivesight.com/">relivesight.com</a> / <a id="l6" href="https://relivesight.com/">return home</a> /
             <br>[identity]: cherry / aletiune  / omnisai / ren
             <br>
-            <br>[bio]: hi, im a 20 year old university student (computer science major) and freelance digital artist, motion designer, video editor,
+            <br>[bio]: hi, im a computer science major university student and freelance digital artist, motion designer, video editor,
             3d modeler, programmer, engineer, and amateur speedrunner
             <br>
         <br>[info]: a showcase of some of my work, both personal and professional / comms open.
