--- a/cherry/index.html
+++ b/cherry/index.html
@@ -61,7 +61,7 @@
             <br>[identity]: cherry / aletiune  / omnisai / ren
             <br>
             <br>[bio]: hi, im a computer science major university student and freelance digital artist, motion designer, video editor,
-            3d modeler, programmer, engineer, and amateur speedrunner
+            3d modeler, programmer, engineer, and media/game enthusiast
             <br>
         <br>[info]: a showcase of some of my work, both personal and professional / comms open.
 
