--- a/cherry/analog/index.html
+++ b/cherry/analog/index.html
@@ -54,7 +54,7 @@
     <input type="button" class="button1" value="Light Mode" id="myButton1" onclick="myFunction()"></input>
 
 
-    <h2>[アナログ - analog]</h2>
+    <h2>[アナログ - <br class="larry">analog]</h2>
     <p class="page-description text-center">
    / <a id="l7" href="https://relivesight.com/">relivesight.com</a> / <a id="l6" href="https://relivesight.com/cherry/">cherry</a> / <a id="l8" href="https://relivesight.com/">return home</a> /
    <br><br>
