--- a/cherry/needyou/index.html
+++ b/cherry/needyou/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../p/main.css">
     <link rel="icon" type="image/png" href="../pnglogobig.png" sizes="1000x1000" />
    
-    <title>「ｒｅ：433% KEYBOARD 」 </title>
+    <title>「ｒｅ：NEED YOU 」 </title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123647555-2"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -54,18 +54,19 @@
     <input type="button" class="button1" value="Light Mode" id="myButton1" onclick="myFunction()"></input>
 
 
-    <h2>[433%<br class="larry"> Keyboard]</h2>
+    <h2>[あなたが必要<br class="larry"> - 𝓃𝑒𝑒𝒹 𝓎𝑜𝓊]</h2>
     <p class="page-description text-center">
    / <a id="l7" href="https://relivesight.com/">relivesight.com</a> / <a id="l6" href="https://relivesight.com/cherry/">cherry</a> / <a id="l8" href="https://relivesight.com/">return home</a> /
    <br><br>
-   [TYPE]: - engineering, featured
+   [TYPE]: - anime edit, featured
    <br>
-   [DATE]: - 09/29/2020
+   [DATE]: - mar/20/2021
    <br>
-   [LINK]: - <a id="l9" target="_blank" href="https://relivesight.com/projects/433/">433% keyboard writeup</a>
+   [LINK]: - <a id="l9" target="_blank" href="https://www.youtube.com/watch?v=0iG-sTQcyO4">あなたが必要 - 𝓃𝑒𝑒𝒹 𝓎𝑜𝓊</a>
    <br><br>
-   [INFO]: - Gateron yellow key switches, variety of keycaps, 450 keys.  
-   <br><br><img class="lazy" data-src="https://vibrant-hodgkin-c6365a.netlify.app/project/433/2.jpg">
+   [ACC]: -  <a id="l10" target="_blank" href="https://www.youtube.com/channel/UCaw9NyNvudFpHxljwC_Xlmw">Omnisai Ren</a> <br>
+   [INFO]: - Anime: Tokyo Ghoul. Song: vowl. - need you (feat. philosofie).
+   <br><br><img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/cherry/official/edits/needyou.png">
    <br>
   </p><br>
   
@@ -85,7 +86,7 @@
       document.getElementsByClassName('button1')[0].style['background-color'] = 'white';
       document.getElementsByClassName('button1')[0].style['color'] = 'black';
       var lemth="l1"
-      for(let i = 1; i < 10; i++)
+      for(let i = 1; i < 11; i++)
       {
           lemth="l" +i
           document.getElementById(lemth).style['color'] = 'white';
@@ -100,7 +101,7 @@
       document.getElementsByClassName('button1')[0].style['background-color'] = 'black';
       document.getElementsByClassName('button1')[0].style['color'] = 'white';
       var lemth="l1"
-      for(let i = 1; i < 10; i++)
+      for(let i = 1; i < 11; i++)
       {
           lemth="l" +i
           document.getElementById(lemth).style['color'] = 'black';
