--- a/cherry/daily/index.html
+++ b/cherry/daily/index.html
@@ -813,9 +813,16 @@
                         </a>
                     </div>
                 </div>
+ --><!--
+        <div style="width:128px;" class="col-sm-12 col-md-4">
+            <div class="sign">
+                <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/60.png" 
+                data-caption='no.060:<br class="larry"> "re:Live"<br class="larry"> <h3>- 08/12/21</h3> '>
+                    <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/60.png" >
+                </a>
+            </div>
+        </div>
  -->
-
-
 
 
 
