--- a/cherry/onelasttime/index.html
+++ b/cherry/onelasttime/index.html
@@ -54,7 +54,7 @@
     <input type="button" class="button1" value="Light Mode" id="myButton1" onclick="myFunction()"></input>
 
 
-    <h2>[最後にもう一度 - 𝑜𝓃𝑒 𝓁𝒶𝓈𝓉 𝓉𝒾𝓂𝑒]</h2>
+    <h2>[最後にもう一度<br class="larry"> - 𝑜𝓃𝑒 𝓁𝒶𝓈𝓉 𝓉𝒾𝓂𝑒]</h2>
     <p class="page-description text-center">
    / <a id="l7" href="https://relivesight.com/">relivesight.com</a> / <a id="l6" href="https://relivesight.com/cherry/">cherry</a> / <a id="l8" href="https://relivesight.com/">return home</a> /
    <br><br>
