--- a/cherry/no.059/index.html
+++ b/cherry/no.059/index.html
@@ -62,7 +62,7 @@
    <br>
    [DATE]: - aug/11/2021
    <br>
-   [LINK]: - <a id="l9" target="_blank" href="#">(not yet)</a>
+   [LINK]: - <a id="l9" target="_blank" href="https://twitter.com/aletiune/status/1425436459344007176?s=20">twitter</a>
    <br>
    [PROGRAM]: - Adobe After Effects 2020
    <br><br>
