--- a/cherry/shop/index.html
+++ b/cherry/shop/index.html
@@ -57,8 +57,12 @@
     <h2>[Shop]</h2>
     <p class="page-description text-center">
    / learn to live / <a id="l7" href="https://relivesight.com/">relivesight.com</a> / <a id="l6" href="https://relivesight.com/">return home</a> /
-   <h1>coming soon . . .</h1>
-</p><br>
+  </p><br>
+  <h2><a id="l8" target="_blank" href="https://www.inprnt.com/gallery/aletiune/">[PRINTS]</a></h2>
+  <p class="page-description"> - <a id="l9" target="_blank" href="https://www.inprnt.com/gallery/aletiune/">Fine Art Print / Canvas Print / Acrylic Print / Art Card</a></p>
+  <br> 
+  <h2>[MERCH]</h2><p class="page-description"> - coming soon....</p>
+<br>
   
  <p class="page-description"><a id="l1" class="yoyo" href="https://relivesight.com/">/return.main/</a>
         <br><br>
@@ -76,7 +80,7 @@
       document.getElementsByClassName('button1')[0].style['background-color'] = 'white';
       document.getElementsByClassName('button1')[0].style['color'] = 'black';
       var lemth="l1"
-      for(let i = 1; i < 8; i++)
+      for(let i = 1; i < 10; i++)
       {
           lemth="l" +i
           document.getElementById(lemth).style['color'] = 'white';
@@ -91,7 +95,7 @@
       document.getElementsByClassName('button1')[0].style['background-color'] = 'black';
       document.getElementsByClassName('button1')[0].style['color'] = 'white';
       var lemth="l1"
-      for(let i = 1; i < 8; i++)
+      for(let i = 1; i < 10; i++)
       {
           lemth="l" +i
           document.getElementById(lemth).style['color'] = 'black';
