--- a/cherry/thematon/index.html
+++ b/cherry/thematon/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../p/main.css">
     <link rel="icon" type="image/png" href="../pnglogobig.png" sizes="1000x1000" />
    
-    <title>「ｒｅ：LOVED 」 </title>
+    <title>「ｒｅ：THEMATON 」 </title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123647555-2"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -54,19 +54,25 @@
     <input type="button" class="button1" value="Light Mode" id="myButton1" onclick="myFunction()"></input>
 
 
-    <h2>[私を愛して<br class="larry"> - i̷ ̷t̷h̷o̷u̷g̷h̷t̷ ̷y̷o̷u̷ ̷l̷o̷v̷e̷d̷ ̷m̷e̷]</h2>
+    <h2>[† 𝔗𝔥𝔢𝔪𝔞𝔱𝔬𝔫]</h2>
     <p class="page-description text-center">
    / <a id="l7" href="https://relivesight.com/">relivesight.com</a> / <a id="l6" href="https://relivesight.com/cherry/">cherry</a> / <a id="l8" href="https://relivesight.com/">return home</a> /
    <br><br>
-   [TYPE]: - anime edit, featured
+   [TYPE]: - website, personal, neocities
    <br>
-   [DATE]: - jan/16/2021
+   [DATE]: - aug/11/2021
    <br>
-   [LINK]: - <a id="l9" target="_blank" href="https://www.youtube.com/watch?v=7SUcfcZ_rUg">私を愛して - i̷ ̷t̷h̷o̷u̷g̷h̷t̷ ̷y̷o̷u̷ ̷l̷o̷v̷e̷d̷ ̷m̷e̷</a>
+   [LINK]: - <a id="l9" target="_blank" href="https://thematon.neocities.org/">† 𝔗𝔥𝔢𝔪𝔞𝔱𝔬𝔫</a>
    <br><br>
-   [ACC]: -  <a id="l10" target="_blank" href="https://www.youtube.com/channel/UCaw9NyNvudFpHxljwC_Xlmw">Omnisai Ren</a> <br>
-   [INFO]: - Anime: Kizumonogatari I, End of Evangelion, Kizumonogatari III. Song: --Neat Beats - Turning on the Large Hadron Collider, The End of Evangelion Audio, dimmortalz - You're So Perfect For Me, Aphex Twin - Come to Daddy.
-   <br><br><img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/cherry/official/edits/loved.png">
+   [INFO]: - Personal art website project for practice with web development.
+   <br>(Featured pictures as of 08/11/2021)
+   <br><br><img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/cherry/official/thematon/1.png">
+   <br><img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/cherry/official/thematon/2.5.png">
+   <br><img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/cherry/official/thematon/3.png">
+   <br><br><img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/cherry/official/thematon/4.png">
+   <br><img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/cherry/official/thematon/6.png">
+   <br><img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/cherry/official/thematon/5.png">
+   <br><img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/cherry/official/thematon/7.png">
    <br>
   </p><br>
   
@@ -86,7 +92,7 @@
       document.getElementsByClassName('button1')[0].style['background-color'] = 'white';
       document.getElementsByClassName('button1')[0].style['color'] = 'black';
       var lemth="l1"
-      for(let i = 1; i < 11; i++)
+      for(let i = 1; i < 10; i++)
       {
           lemth="l" +i
           document.getElementById(lemth).style['color'] = 'white';
@@ -101,7 +107,7 @@
       document.getElementsByClassName('button1')[0].style['background-color'] = 'black';
       document.getElementsByClassName('button1')[0].style['color'] = 'white';
       var lemth="l1"
-      for(let i = 1; i < 11; i++)
+      for(let i = 1; i < 10; i++)
       {
           lemth="l" +i
           document.getElementById(lemth).style['color'] = 'black';
