--- a/cherry/no.057/index.html
+++ b/cherry/no.057/index.html
@@ -62,7 +62,7 @@
    <br>
    [DATE]: - aug/09/2021
    <br>
-   [LINK]: - <a id="l9" target="_blank" href="#">(not yet)</a>
+   [LINK]: - <a id="l9" target="_blank" href="https://twitter.com/aletiune/status/1424691021921849345?s=20">twitter</a>
    <br>
    [PROGRAM]: - Adobe After Effects 2020, Element 3d 
    <br><br>
