--- a/cherry/daily/index.html
+++ b/cherry/daily/index.html
@@ -58,7 +58,7 @@
     <h2>[Daily Art]</h2>
     <p class="page-description text-center">
         / learn to live / <a id="l5" href="https://relivesight.com/">relivesight.com</a> / <a id="l6" href="https://relivesight.com/">return home</a> /<br>
-   [official start date]: {jun 15 2021} [current day]: {no.60} 
+   [official start date]: {jun 15 2021} [current day]: {no.61} 
    
    <br><br>
    [tools utilized]: after effects / element 3d / photoshop / blender /
@@ -822,8 +822,47 @@
                 </a>
             </div>
         </div>
- 
-
+        <div style="width:128px;" class="col-sm-12 col-md-4">
+            <div class="sign">
+                <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/61.png" 
+                data-caption='no.061:<br class="larry"> "ｉｎｓｉｄｅ ｙｏｕｒ ｍｉｎｄ"<br class="larry"> <h3>- 08/13/21</h3> '>
+                    <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/61.png" >
+                </a>
+            </div>
+        </div><!--
+        <div style="width:128px;" class="col-sm-12 col-md-4">
+            <div class="sign">
+                <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/62.png" 
+                data-caption='no.062:<br class="larry"> "twistedbright"<br class="larry"> <h3>- 08/14/21</h3> '>
+                    <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/62.png" >
+                </a>
+            </div>
+        </div>
+        <div style="width:128px;" class="col-sm-12 col-md-4">
+            <div class="sign">
+                <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/63.png" 
+                data-caption='no.063:<br class="larry"> "ocean.current"<br class="larry"> <h3>- 08/15/21</h3> '>
+                    <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/63.png" >
+                </a>
+            </div>
+        </div>
+        <div style="width:128px;" class="col-sm-12 col-md-4">
+            <div class="sign">
+                <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/64.png" 
+                data-caption='no.064:<br class="larry"> "light story"<br class="larry"> <h3>- 08/16/21</h3> '>
+                    <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/64.png" >
+                </a>
+            </div>
+        </div>
+        <div style="width:128px;" class="col-sm-12 col-md-4">
+            <div class="sign">
+                <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/65.png" 
+                data-caption='no.065:<br class="larry"> "sky2"<br class="larry"> <h3>- 08/17/21</h3> '>
+                    <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/65.png" >
+                </a>
+            </div>
+        </div>
+-->
 
 
             </div>
