--- a/cherry/index.html
+++ b/cherry/index.html
@@ -62,8 +62,8 @@
             / learn to live / <a id="l5" href="https://relivesight.com/">relivesight.com</a> / <a id="l6" href="https://relivesight.com/">return home</a> /
             <br>[identity]: cherry / aletiune  / omnisai / ren
             <br>
-            <br>[bio]: hi, im a computer science major university student and freelance digital artist, motion designer, video editor,
-            3d modeler, programmer, engineer, and media/game enthusiast
+            <br>[bio]: hi, im a computer science major, university student, freelance digital artist, motion designer, video editor,
+            3d modeler, programmer, engineer, and media/game enthusiast and i like making art!
             <br>
         <br>[info]: a showcase of some of my work, both personal and professional / comms open.
 
