--- a/cherry/daily/index.html
+++ b/cherry/daily/index.html
@@ -58,7 +58,7 @@
     <h2>[Daily Art]</h2>
     <p class="page-description text-center">
         / learn to live / <a id="l5" href="https://relivesight.com/">relivesight.com</a> / <a id="l6" href="https://relivesight.com/">return home</a> /<br>
-   [official start date]: {jun 15 2021} [current day]: {no.64} 
+   [official start date]: {jun 15 2021} [current day]: {no.65} 
    
    <br><br>
    [tools utilized]: after effects / element 3d / photoshop / blender /
@@ -853,7 +853,7 @@
                     <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/64.png" >
                 </a>
             </div>
-        </div><!--
+        </div>
         <div style="width:128px;" class="col-sm-12 col-md-4">
             <div class="sign">
                 <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/65.png" 
@@ -862,7 +862,7 @@
                 </a>
             </div>
         </div>
--->
+<!---->
 
 
             </div>
