--- a/cherry/daily/index.html
+++ b/cherry/daily/index.html
@@ -58,7 +58,7 @@
     <h2>[Daily Art]</h2>
     <p class="page-description text-center">
         / learn to live / <a id="l5" href="https://relivesight.com/">relivesight.com</a> / <a id="l6" href="https://relivesight.com/">return home</a> /<br>
-   [official start date]: {jun 15 2021} [current day]: {no.65} 
+   [official start date]: {jun 15 2021} [current day]: {no.68} 
    
    <br><br>
    [tools utilized]: after effects / element 3d / photoshop / blender /
@@ -862,7 +862,39 @@
                 </a>
             </div>
         </div>
-<!---->
+        <div style="width:128px;" class="col-sm-12 col-md-4">
+            <div class="sign">
+                <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/66.png" 
+                data-caption='no.066:<br class="larry"> "~s.k-y~"<br class="larry"> <h3>- 08/18/21</h3> '>
+                    <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/66.png" >
+                </a>
+            </div>
+        </div>
+        <div style="width:128px;" class="col-sm-12 col-md-4">
+            <div class="sign">
+                <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/67.png" 
+                data-caption='no.067:<br class="larry"> ".net"<br class="larry"> <h3>- 08/19/21</h3> '>
+                    <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/67.png" >
+                </a>
+            </div>
+        </div>
+        <div style="width:128px;" class="col-sm-12 col-md-4">
+            <div class="sign">
+                <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/68.png" 
+                data-caption='no.068:<br class="larry"> "dream castle"<br class="larry"> <h3>- 08/20/21</h3> '>
+                    <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/68.png" >
+                </a>
+            </div>
+        </div><!--
+        <div style="width:128px;" class="col-sm-12 col-md-4">
+            <div class="sign">
+                <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/69.png" 
+                data-caption='no.069:<br class="larry"> "m.m//hra"<br class="larry"> <h3>- 08/21/21</h3> '>
+                    <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/69.png" >
+                </a>
+            </div>
+        </div>
+-->
 
 
             </div>
