--- a/lists/games/index.html
+++ b/lists/games/index.html
@@ -724,6 +724,7 @@
                  <tr><td class="fin">Task Force Kampas</td><td>$4.99</td><td>N</td><td>&nbsp;</td></tr>
                  <tr><td class="fin">Eat Girl</td><td>$5.00</td><td>N</td><td>pac man but it has levels and incremental speed</td></tr>
                  <tr><td class="fin">Minit</td><td>$9.99</td><td>N</td><td>&nbsp;</td></tr>
+                 <tr><td class="fin">Hanarenai</td><td>Free</td><td>N</td><td>&nbsp;</td></tr>
                  
                  <tr><td class="qui">Pixel Session Vol. 1</td><td>$3.00</td><td>N</td><td>&nbsp;</td></tr>
                  
