--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -126,7 +126,7 @@
           <thead><tr><td>Name</td><td>Progress</td><td>Type</td><td>Score</td><td>Notes</td></tr></thead><tbody>
             <tr><td class="wat">Alien 9</td><td>2</td><td>Ova</td><td class="a0">~</td><td></td></tr>
             
-
+            <tr><td class="fav">Ōran Kōkō Hosuto Kurabu</td><td>26</td><td>Tv</td><td class="a9">10*</td><td>i will not explain myself (yet)</td></tr>
             <tr><td class="fav">Shin Seiki Evangelion </td><td>26</td><td>Tv</td><td class="a9">9.6</td><td>a true classic</td></tr>
             <tr><td class="fav">Steins;Gate </td><td>24</td><td>Tv</td><td class="a9">9.6</td><td>haAcking to the gate!</td></tr>
             <tr><td class="fav">Serial Experiments Lain </td><td>13</td><td>Tv</td><td class="a9">9.6</td><td>lets all love lain</td></tr>
@@ -309,7 +309,9 @@
            <tr><td class="pas">Welcome to the N.H.K.</td><td>13</td><td>Tv</td><td class="a0">~</td><td></td></tr>
             
 
-            <tr><td class="drp">Elfen Lied</td><td>3</td><td>Tv</td><td class="a0">~</td><td>miserably forced, despite the hope latin artistic op gave me</td></tr>
+           <tr><td class="drp">The Detective is Already Dead</td><td>2</td><td>Tv</td><td class="a0">~</td><td>hilarious</td></tr>
+           <tr><td class="drp">Heion Sedai no Idaten-tachi</td><td>1</td><td>Tv</td><td class="a0">~</td><td></td></tr>
+           <tr><td class="drp">Elfen Lied</td><td>3</td><td>Tv</td><td class="a0">~</td><td>miserably forced, despite the hope latin artistic op gave me</td></tr>
             <tr><td class="drp">So I'm a Spider, So What?</td><td>3</td><td>Tv</td><td class="a0">~</td><td></td></tr>      
             <tr><td class="drp">Noblesse</td><td>3</td><td>Tv</td><td class="a0">~</td><td></td></tr>      
          <tr><td class="drp">Jobless Reincarnation</td><td>2</td><td>Tv</td><td class="a0">~</td><td></td></tr>      
