--- a/cherry/daily/index.html
+++ b/cherry/daily/index.html
@@ -58,7 +58,7 @@
     <h2>[Daily Art]</h2>
     <p class="page-description text-center">
         / learn to live / <a id="l5" href="https://relivesight.com/">relivesight.com</a> / <a id="l6" href="https://relivesight.com/">return home</a> /<br>
-   [official start date]: {jun 15 2021} [current day]: {no.151} 
+   [official start date]: {jun 15 2021} [current day]: {no.153} 
    
    <br><br>
    [tools utilized]: after effects / element 3d / photoshop / blender /
@@ -69,12 +69,10 @@
     
 
     <div class="tz-gallery">
-
         <!-- this one is desktop i think-->
         <div>
             <!-- 205px x 4 works   164px x 5 works  - 128 x 8 works-->
             <div class="row">
-<!--
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/153.png"
@@ -90,7 +88,7 @@
                             <img class="lazy" data-src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/152.png" >
                         </a>
                     </div>
-                </div>-->
+                </div>
                <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/151.png"
