--- a/cherry/contact/index.html
+++ b/cherry/contact/index.html
@@ -45,8 +45,8 @@
 
 <div class="container gallery-container">
     <h1><div class="carry"><img id="logo" style="width:300px; margin-bottom:15px;" src="../cherry-save.png" >
-    <a id="l13" href="https://relivesight.com/cherry">PORTFOLIO</a>
-    <a id="l12" href="https://relivesight.com/cherry/daily">DAILY</a>
+    <a id="l9" href="https://relivesight.com/cherry">PORTFOLIO</a>
+    <a id="l8" href="https://relivesight.com/cherry/daily">DAILY</a>
     <a id="l11" href="https://relivesight.com/cherry/contact">CONTACT</a>
     <a id="l10" href="https://relivesight.com/cherry/shop">SHOP</a>
     </div></h1>
@@ -56,38 +56,28 @@
 
     <h2>[Contact]</h2>
     <p class="page-description text-center">
-   / contact me / <a id="l9" href="https://relivesight.com/">relivesight.com</a> / <a id="l14" href="https://relivesight.com/cherry/">cherry</a> / <a id="l8" href="https://relivesight.com/">return home</a> /
+   / contact me / <a id="l2" href="https://relivesight.com/">relivesight.com</a> / <a id="l13" href="https://relivesight.com/cherry/">cherry</a> / <a id="l12" href="https://relivesight.com/">return home</a> /
    <br><br>
-   [INFO]: open to commissions for cover art, video visuals, and more. contact me on
-   <a id="l16" target="_blank" href="https://twitter.com/aletiune">twitter (@aletiune)</a> or discord (𝖆𝖑𝖊𝖙𝖎𝖚𝖓𝖊#3865)
-   for quotes. flexible.
+   [INFO]: contacts
    <br><br>
    [SOCIAL]: my various socials:
    <br><br>
-   [discord]: 𝖆𝖑𝖊𝖙𝖎𝖚𝖓𝖊#3865
-   <br>
-   [discord_2]: 𝑜𝓂𝓃𝒾𝓈𝒶𝒾 ♡#2639
+   [discord]: 𝑜𝓂𝓃𝒾𝓈𝒶𝒾 ♡#2639
    <br><br>
-   [twitter]: <a id="l7" target="_blank" href="https://twitter.com/aletiune">cherry✟ @aletiune</a>
-   <br>
-   [twitter_2]: <a id="l6" target="_blank" href="https://twitter.com/omnisai">𝔯𝔢𝔫 ♡ @omnisai</a>
+   [twitter]: <a id="l6" target="_blank" href="https://twitter.com/omnisai">𝔯𝔢𝔫 ♡ @omnisai</a>
    <br><br>
-   [steam_2]: <a id="l5" target="_blank" href="https://steamcommunity.com/id/omnisairen/">【Omnisairen】</a>
+   [steam]: <a id="l5" target="_blank" href="https://steamcommunity.com/id/omnisairen/">【Omnisairen】</a>
    <br>
-   [reddit_2]: <a id="l4" target="_blank" href="https://www.reddit.com/user/OmnisaiRen">✦𝖔𝖒𝖓𝖎𝖘𝖆𝖎 𝖗𝖊𝖓✦</a>
+   [reddit]: <a id="l4" target="_blank" href="https://www.reddit.com/user/OmnisaiRen">✦𝖔𝖒𝖓𝖎𝖘𝖆𝖎 𝖗𝖊𝖓✦</a>
    <br>
-   [instagram_2]: <a id="l3" target="_blank" href="https://www.instagram.com/omnisai.ren/">omnisai.ren</a>
+   [instagram]: <a id="l3" target="_blank" href="https://www.instagram.com/omnisai.ren/">omnisai.ren</a>
    <br><br>
-   [youtube]: <a id="l2" target="_blank" href="https://www.youtube.com/channel/UCLxXYys18P4foS8Kxg9Uxtg">aletiune</a>
-   <br>
-   [youtube_2]: <a id="l1" target="_blank" href="https://www.youtube.com/channel/UCaw9NyNvudFpHxljwC_Xlmw">Omnisai Ren</a>
+   [youtube]: <a id="l1" target="_blank" href="https://www.youtube.com/channel/UCaw9NyNvudFpHxljwC_Xlmw">Omnisai Ren</a>
    <br><br>
-   [email]: aletiune@gmail.com
-   <br>
-   [email_2]: omnisairen@gmail.com
+   [email]: omnisairen@gmail.com
 </p><br>
   
- <p class="page-description"><a id="l15" class="yoyo" href="https://relivesight.com/">/return.main/</a>
+ <p class="page-description"><a id="l7" class="yoyo" href="https://relivesight.com/">/return.main/</a>
         <br><br>
         </p>  
 </div>
@@ -103,7 +93,7 @@
       document.getElementsByClassName('button1')[0].style['background-color'] = 'white';
       document.getElementsByClassName('button1')[0].style['color'] = 'black';
       var lemth="l1"
-      for(let i = 1; i < 17; i++)
+      for(let i = 1; i < 14; i++)
       {
           lemth="l" +i
           document.getElementById(lemth).style['color'] = 'white';
@@ -118,7 +108,7 @@
       document.getElementsByClassName('button1')[0].style['background-color'] = 'black';
       document.getElementsByClassName('button1')[0].style['color'] = 'white';
       var lemth="l1"
-      for(let i = 1; i < 17; i++)
+      for(let i = 1; i < 14; i++)
       {
           lemth="l" +i
           document.getElementById(lemth).style['color'] = 'black';
