--- a/cherry/daily/index.html
+++ b/cherry/daily/index.html
@@ -58,12 +58,14 @@
     <h2>[Daily Art]</h2>
     <p class="page-description text-center">
         / learn to live / <a id="l5" href="https://relivesight.com/">relivesight.com</a> / <a id="l6" href="https://relivesight.com/">return home</a> /<br>
-   [official start date]: {jun 15 2021} [current day]: {no.153} 
-   
+   [official start date]: {jun 15 2021} <strike>[current day]: {no.153}</strike> 
+
+  
    <br><br>
    [tools utilized]: after effects / element 3d / photoshop / blender /
    autodesk fusion 360 / cinema 4d / visual studio code / ableton live 10 suite / [x]: video link
     </p>
+    <center><h2><bold>{ARCHIVED: no longer updated}</bold></h2></center>
     <br>
 
     
