--- a/lists/games/index.html
+++ b/lists/games/index.html
@@ -95,7 +95,8 @@
           <table class="tableizer-table">
             <tr><td><center>Total Game Count: 568</center></td></tr>
                <tr><td>Estimated List Completeness: ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱ 75%</td></tr>
-            </tbody></table>  
+               <tr><td>List Upkeep: Discontinued</td></tr>
+              </tbody></table>  
 
           <p>Games:</p>
  
