--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -310,7 +310,7 @@
             <tr><td class="pas">Karakai Jouzu no Takagi-san </td><td>2</td><td>Tv</td><td class="a0">~</td><td></td></tr>
            <tr><td class="pas">Harmony </td><td>0</td><td>Film</td><td class="a0">~</td><td></td></tr>
            <tr><td class="pas">Welcome to the N.H.K.</td><td>13</td><td>Tv</td><td class="a0">~</td><td></td></tr>
-           <tr><td class="pas">Cowboy Bebop</td><td>6</td><td>Tv</td><td class="a0">pretty boring comedy with no stakes or overarching plot intrigue! or maybe i just didnt get there yet~</td><td></td></tr>
+           <tr><td class="pas">Cowboy Bebop</td><td>6</td><td>Tv</td><td class="a0">~</td><td>pretty boring comedy with no stakes or overarching plot intrigue! or maybe i just didnt get there yet~</td></tr>
              
 
            <tr><td class="drp">Samurai Champloo</td><td>3</td><td>Tv</td><td class="a0">~</td><td></td></tr>
