happy new years?

--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -126,7 +126,8 @@
         <p>Shows:</p>
         <table class="tableizer-table">
           <thead><tr><td>Name</td><td>Progress</td><td>Type</td><td>Score</td><td>Notes</td></tr></thead><tbody>
-
+            <tr><td class="wat">Candy☆Boy</td><td>1</td><td>ONA</td><td class="a0">~</td><td></td></tr>
+            
             <tr><td class="fav">Ōran Kōkō Hosuto Kurabu</td><td>26</td><td>Tv</td><td class="a9">10*</td><td>i will not explain myself (yet)</td></tr>
             <tr><td class="fav">Shin Seiki Evangelion </td><td>26</td><td>Tv</td><td class="a9">9.6</td><td>a true classic</td></tr>
             <tr><td class="fav">Steins;Gate </td><td>24</td><td>Tv</td><td class="a9">9.6</td><td>haAcking to the gate!</td></tr>
