--- a/index.html
+++ b/index.html
@@ -105,10 +105,16 @@
             <p>┈ ♡ 70k hits baby! ​♡ ​┈</p>
             <img class="logo" src="images/home/d1.webp" />  </center>
             <div class="row2 imgPixel">
-              
+
               <p class="text-center">------------------------∞✧༺​♡༻✧∞------------------------
               <a href="/blog/" class="navi" ><img src="images/nav/flow1.png">most recently updated page: blog <img src="images/nav/flow1.png"></a>
               ------------------------∞✧༺​♡༻✧∞------------------------</p>
+
+              <div class="col-sm-3 col-md-2"><img src="images/home/z1.png" class="img-center"></div>
+              <div class="col-sm-9 col-md-offset-1">
+                <h3 style="margin-bottom:10px;">01/01/22 </h3>
+                <p style="margin-bottom:30px;">i thought it would be fitting to be as obscure as possible this year</p>
+              </div>
 
               <div class="col-sm-3 col-md-2"><img src="images/home/z2.png" style="margin-left:18px;height:90px;" class="img-center"></div>
               <div class="col-sm-9 col-md-offset-1">
