--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <a href="/blog" class="navi"><img src="images/nav/flow1.png">blog</a>
         <a href="/highlights" class="navi"><img src="images/nav/flow1.png">highlights</a>
         <a href="/reference" class="navi"><img src="images/nav/flow1.png">reference</a>
-        <a href="/lists" class="navi"><img src="images/nav/flow1.png">lists</a>
+        <!--<a href="/lists" class="navi"><img src="images/nav/flow1.png">lists</a>-->
         <a href="/habitue" class="navi"><img src="images/nav/flow1.png">habitue</a>    
         <img src="images/nav/navi-rite1.png" class="naviBanners" style="margin-top:20px;">
         <a href="/ongoing" class="navi"><img src="images/nav/flow1.png">ongoing</a>
