--- a/highlights/index.html
+++ b/highlights/index.html
@@ -79,7 +79,7 @@
         <li><a href="https://relivesight.com/writing/" target="_blank">writing</a> - where i write reviews and stuff</li>
  <li><a href="https://relivesight.com/reference/wii/" target="_blank">wii softmod guide</a> - decent guide to softmodding your wii</li>
         <li><a href="https://relivesight.com/studylogs/datamosh/" target="_blank">datamoshing</a> - video datamoshing tutorial</li>
-        <li><a href="https://relivesight.com/lists/" target="_blank">lists</a> - hub for lists of my games n anime </li>
+        <!--<li><a href="https://relivesight.com/lists/" target="_blank">lists</a> - hub for lists of my games n anime </li>-->
         <li><a href="https://relivesight.com/video/" target="_blank">video</a> - a hub for all video projects ive done (not too many atm)</li>
         <li><a href="https://relivesight.com/manga/" target="_blank">manga</a> - a hub for the one scanlation i've done</li>
         <li><a href="https://relivesight.com/book/" target="_blank">book</a> - 1 million 'words' honestly just so i can say im a published author haha</li>
