--- a/re/side.html
+++ b/re/side.html
@@ -9,7 +9,7 @@
 <li><a href="https://relivesight.com/lapse/">lapse</a></li>
 <li><a href="https://relivesight.com/blog/">blog</a></li>
 <li><a href="https://relivesight.com/highlights/">highlights</a></li>
-<li><a href="https://relivesight.com/lists/">lists</a></li>
+<!--<li><a href="https://relivesight.com/lists/">lists</a></li>-->
 <li><a href="https://relivesight.com/habitue/">habitue</a></li>
 <li><a href="https://relivesight.com/video/">videos</a></li>
 <li><a href="https://relivesight.com/book/">book</a></li>
