--- a/writing/paprika/index.html
+++ b/writing/paprika/index.html
@@ -164,7 +164,7 @@
               One likely large contributer to my inadequacy to proclaim <i>Paprika</i> as great, was the fact that I did not incredibly enjoy it. 
               The overall aesthetic is not particularly satisfying to me and though extremely impressive, the vibrant exaggerated animation
               is not my style.
-              It is apparent to anyone that is something notable, but that something just isn't up my alley.
+              It is apparent to anyone that it is something notable, but that something just isn't up my alley.
               However, my enjoyment has no bearing on the quality of work of art, and I will take on the challenge of appraising something I believe
               to be great, despite my inability to enjoy it as such.
               </p>
