--- a/links/index.html
+++ b/links/index.html
@@ -31,7 +31,7 @@
       <img src="../images/video/2.jpg" class="rounded" />
     </div>
     
-    <h3>Ren Rose</h3>  
+    <h3>Ren</h3>  
     <h2>
       𝑜𝓂𝓃𝒾𝓈𝒶𝒾 ♡#2639
     </h2>
