--- a/art/index.html
+++ b/art/index.html
@@ -47,7 +47,7 @@
 
         <div id="content">
             <p>
-                Welcome to the place where i share my art endeavors, 95% of what i've done is not here sorry its cringe,
+                Welcome to the place where i share my FORMER art endeavors (emphasis on former im much cooler now), 95% of what i've done is not here sorry its cringe,
                 i mean so is the stuff that is here but still. listed in no particular order.
             </p>
         </div>
