--- a/artlogs/index.html
+++ b/artlogs/index.html
@@ -47,8 +47,9 @@
 
         <div id="content">
             <p>
-            Hub world for "art" "projects". "art" webpages, my cringe art, my scanlation, and art i like will all be "featured" here.
-            i hope this page can evolve into a decent "portfoilo" of "works." also i didnt use "quotes" too much you did
+            Hub world for "art" "projects", "art" webpages, and my scanlation.<br>
+            <strike>i hope this page can evolve into a decent "portfoilo" of "works."</strike> well i've
+            moved on from this page but i'll still keep it up for documentations sake. also i didnt use "quotes" too much you did
             </p>
         </div>
 				<div id="content2">
@@ -56,7 +57,7 @@
 										<p><a href="https://relivesight.com/">Return to Home Page</a></p>
 								</div>
 						</div>
-                        
+                <!--       
                         <div id="ccontent">
                             <img class="auditorium" src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/002.png" style="width: 160px;"/>
                             <br><br><h3>Daily</h3>            <ol class="playlist_info">
@@ -64,7 +65,7 @@
                             </ol>
                             <a href="/cherry/daily" class="label3">SEE MORE </a>
                         </div>
-
+-->
                         <div id="ccontent">
                             <img class="auditorium" src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/annex/21.jpg" style="width: 160px;"/>
                             <br><br><h3>Annex</h3>            <ol class="playlist_info">
