--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <a href="/writing" class="navi"><img src="images/nav/flow1.png">writing</a>
         
         <img src="images/nav/navi-vmfx1.png" class="naviBanners" style="margin-top:20px;"> 
-        <a href="/cherry" class="navi"><img src="images/nav/flow1.png">portfolio</a>
-        <a href="/cherry/daily" class="navi"><img src="images/nav/flow1.png">daily</a> 
+        <!--<a href="/cherry" class="navi"><img src="images/nav/flow1.png">portfolio</a>
+        <a href="/cherry/daily" class="navi"><img src="images/nav/flow1.png">daily</a>--> 
         <a href="/artlogs" class="navi"><img src="images/nav/flow1.png">art</a>
         <a href="/manga" class="navi"><img src="images/nav/flow1.png">manga</a>
         <a href="/video" class="navi"><img src="images/nav/flow1.png">video</a>
