--- a/re/side.html
+++ b/re/side.html
@@ -27,8 +27,8 @@
   
 <a href="https://relivesight.com/artlogs/">Art Logs</a>
   <ul>
-    <li><a href="https://relivesight.com/cherry/">portfolio</a></li>
-    <li><a href="https://relivesight.com/cherry/daily/">daily</a></li>
+    <!--<li><a href="https://relivesight.com/cherry/">portfolio</a></li>
+    <li><a href="https://relivesight.com/cherry/daily/">daily</a></li>-->
     <li><a href="https://relivesight.com/annex/">annex</a></li>
     <li><a href="https://relivesight.com/athame/">project athame</a></li>
   <li><a href="https://relivesight.com/edits/">anime edits</a></li>
