--- a/highlights/index.html
+++ b/highlights/index.html
@@ -43,7 +43,7 @@
         <p> join the re:live sight mailing list! <a target="_blank" href="https://mailchi.mp/d99612d22ecc/relive-sight">click here~</a></p>  
       --><h1>Relevant Descriptions</h1>
         <p>—「01://Who am I?」<br>
-      i am ren rose, i have quite a few hobbies and if you wanna read more about me reference my <strike>cringe</strike> <a href="https://relivesight.com/bio" target="_blank">bio</a>.
+      i am ren, i have quite a few hobbies and if you wanna read more about me reference my <strike>cringe</strike> <a href="https://relivesight.com/bio" target="_blank">bio</a>.
     but i could sum it all up by saying i am a 'technology enthusiast'
     since (mostly) all of my hobbies wouldn't be possible without tech.
   check my <a href="https://relivesight.com/blog" target="_blank">blog</a>
