--- a/cherry/index.html
+++ b/cherry/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="icon" type="image/png" href="pnglogobig.png" sizes="1000x1000" />
    
-    <title>「ｒｅ：𝖆𝖑𝖊𝖙𝖎𝖚𝖓𝖊 」</title>
+    <title>「ｒｅ：cherry」</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123647555-2"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -60,13 +60,13 @@
             <h2 style="text-align:left">[Portfolio] </h2>  
             <p class="page-description text-center">
             / learn to live / <a id="l5" href="https://relivesight.com/">relivesight.com</a> / <a id="l6" href="https://relivesight.com/">return home</a> /
-            <br>[identity]: cherry / aletiune  / omnisai / ren
+            <!--<br>[identity]:
             <br>
             <br>[bio]: hi, im a computer science major, university student, freelance digital artist, motion designer, video editor,
             3d modeler, programmer, engineer, and media/game enthusiast and i like making art!
             <br>
         <br>[info]: a showcase of some of my work, both personal and professional / comms open.
-
+            -->
         <br><br>
             </p>
     
